--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rickandmorty",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hilas60.github.io/rickandmorty",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
